[gd_scene load_steps=2 format=3 uid="uid://c7wn3xpm5qr2d"]

[ext_resource type="Script" path="res://scenes/settings_controller.gd" id="1_settings"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_settings")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.12, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="VBoxContainer/Header"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "< "

[node name="Title" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
text = "⚙️ AYARLAR"
vertical_alignment = 1

[node name="Separator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="MusicContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="VBoxContainer/MusicContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Music"
vertical_alignment = 1

[node name="MusicToggle" type="CheckButton" parent="VBoxContainer/MusicContainer"]
layout_mode = 2
button_pressed = true

[node name="SFXContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SFXLabel" type="Label" parent="VBoxContainer/SFXContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Sound Effects"
vertical_alignment = 1

[node name="SFXToggle" type="CheckButton" parent="VBoxContainer/SFXContainer"]
layout_mode = 2
button_pressed = true

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="DevContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DevInput" type="LineEdit" parent="VBoxContainer/DevContainer"]
layout_mode = 2
size_flags_horizontal = 4
custom_minimum_size = Vector2(200, 40)
theme_override_colors/font_color = Color(0.3, 0.3, 0.3, 1)
theme_override_colors/font_placeholder_color = Color(0.2, 0.2, 0.2, 0.5)
theme_override_font_sizes/font_size = 14
placeholder_text = "Enter code..."
alignment = 1
secret = true

[node name="DevStatus" type="Label" parent="VBoxContainer/DevContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
text = "⬅️ ANA MENÜ"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 18
text = "Version 1.0.0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="toggled" from="VBoxContainer/MusicContainer/MusicToggle" to="." method="_on_music_toggled"]
[connection signal="toggled" from="VBoxContainer/SFXContainer/SFXToggle" to="." method="_on_sfx_toggled"]
[connection signal="text_submitted" from="VBoxContainer/DevContainer/DevInput" to="." method="_on_dev_input_text_submitted"]
[connection signal="pressed" from="VBoxContainer/Header/BackButton" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_pressed"]
